content: bulk wiki rewrite — SE corpus, hubs, retirement, finance, agentic skills
Aggregates the prior session's content work that was unstaged across the
wiki page corpus:

- Software-engineering corpus rewrites: java (18), SE practices (10),
  web-services (10), design-patterns (5), cloud-platforms (14),
  networking (7), engineering-leadership (6), data-engineering (7),
  frontend (10), devops-sre (14)
- Cluster extensions: security (7), distributed-systems (7),
  databases (9), wikantik-development (11), agentic-skills (10)
- Personal-finance cluster (27 new) and index-fund-investing (17)
- Retirement-planning orphans (19) and conflicts-equity-markets (4)
- 11 new cluster hub pages (+Hub.md): cloud-platforms, data-engineering,
  design-patterns, devops-sre, engineering-leadership, frontend, java,
  networking, personal-finance, SE-practices, web-services
- New PersonalFinanceGuide.md and PersonalFinance+Hub.md
- 23 deletions of trash/auto-generated stinkers
- Cross-link sweep + hub polish

Also:
- docs/ArchitectureCritique.md — manager-registry / service-locator
  critique of WikiEngine
- audits/2026-04-24-content-quality-evaluation.md — content-quality audit
- articles_to_create.csv — backlog of article ideas with target filenames