@@ -2,215 +2,178 @@
 canonical_id: 01KQ0P44RB0EC2WE3DW85CTDWS
 title: Java Module System
 type: article
+cluster: java
+status: active
+date: '2026-04-26'
+summary: How the Java Module System (Project Jigsaw, Java 9+) works, the cases where
+  modules pay off, and the practical path for adopting modules vs. staying on the
+  classpath.
 tags:
-- modul
-- requir
-- depend
-summary: This tutorial assumes a high level of familiarity with Java's internal workings,
-  bytecode manipulation, and dependency resolution theory.
-auto-generated: true
+- java
+- modules
+- jpms
+- jigsaw
+- packaging
+related:
+- JavaTwentyOneFeatures
+- JavaCollectionsFramework
+- MavenMultiModuleProjects
+- JavaBuildToolComparison
+hubs:
+- Java Hub
 ---
-# Mastering the Art of Isolation
+# Java Module System
 
-The evolution of Java's module system, formalized by the Java Platform Module System (JPMS) in Java 9 (and subsequently refined through subsequent JEPs), represents one of the most significant architectural shifts in the language's history. For seasoned developers and researchers accustomed to the historical flexibility—and inherent chaos—of the traditional classpath model, JPMS is not merely an organizational tool; it is a fundamental paradigm shift in how dependencies, visibility, and runtime contracts are enforced.
+The Java Module System (JPMS), introduced in Java 9 as Project Jigsaw, was the largest change to Java's structure in a decade. It introduced *modules* as a unit larger than packages: a named, versioned, encapsulated unit with explicit imports and exports. The promise: better encapsulation, smaller deployments, faster startup.
 
-This tutorial assumes a high level of familiarity with Java's internal workings, bytecode manipulation, and dependency resolution theory. We are not here to explain what a package is, but rather to dissect the mechanisms by which JPMS enforces *strong encapsulation* at the JVM level, providing the necessary rigor for building next-generation, highly resilient, and maintainable enterprise systems.
+The reality: modules are useful for some codebases and overhead for others. Many production Java codebases stay on the classpath. This page is about how modules work, when they pay off, and the practical path for adoption.
 
----
+## The basics
 
-## I. The Conceptual Leap: From Classpath Chaos to Contractual Modules
-
-To appreciate the power of JPMS encapsulation, one must first fully grasp the deficiencies of its predecessor: the classpath.
-
-### The Limitations of the Classpath Model
-
-Historically, Java relied on the classpath, a flat, unstructured collection of JAR files. In this model, visibility was determined by runtime availability, not by explicit declaration. If a class existed on the classpath, it was, by default, accessible to any other class on the classpath. This led to several critical architectural vulnerabilities:
-
-1.  **Accidental Coupling:** Components could inadvertently rely on internal, non-public APIs of other libraries, leading to brittle code that broke with minor upstream version bumps.
-2.  **Transitive Dependency Hell:** Managing the correct versions and ordering of dozens of libraries became a nightmare, often requiring complex build-time hacks.
-3.  **Lack of Provenance:** There was no inherent mechanism to declare *what* a library intended to expose versus what it merely *used*.
-
-JPMS, formalized by JEP 261, solves this by introducing the concept of the **Module**. A module is not just a JAR file; it is a *named, encapsulated unit of code* that explicitly declares its boundaries, its dependencies, and its public API.
-
-### Defining the Module Boundary
-
-At its core, a module enforces a strict contract. A module defines:
-
-1.  **Its Own Identity:** A unique, fully qualified module name.
-2.  **Its Internal API:** The packages it contains.
-3.  **Its Public API (The Contract):** Which of its internal packages it *explicitly* wishes to expose to the outside world via the `exports` directive.
-4.  **Its Dependencies:** Which other modules it *requires* to function, and what specific packages it needs from those dependencies via the `requires` directive.
-
-This shift moves dependency management from a *runtime discovery* problem (classpath) to a *compile-time contract enforcement* problem (module descriptor).
-
----
-
-## II. The Mechanics of Encapsulation: `module-info.java`
-
-The heart of JPMS encapsulation lies within the `module-info.java` file. This file is the module's manifest, the declarative source of truth for its boundaries. Understanding its directives is paramount for advanced usage.
-
-### A. The `requires` Directive: Establishing Dependencies
-
-The `requires` directive is the mechanism for declaring dependencies. When Module A `requires` Module B, the compiler and the JVM perform several critical checks:
-
-1.  **Existence Check:** Module B must exist on the module path.
-2.  **API Availability Check:** Module A can only access the packages that Module B *explicitly* `exports`. If Module B contains a package `com.example.internal` but does not `export` it, Module A cannot access it, even if the bytecode is present.
-
-**Expert Consideration: Deep vs. Shallow Dependencies**
-It is crucial to distinguish between requiring a module and requiring a specific package.
-
-*   `requires com.vendor.logging`: This makes the entire module available.
-*   `requires com.vendor.logging/com/vendor/logging/api`: This is a more granular, though less common, way to specify dependency scope, ensuring only the specified package is visible, though typically, relying on the module's public contract is cleaner.
-
-### B. The `exports` Directive: Defining the Public Surface Area
-
-The `exports` directive is the primary tool for encapsulation. It dictates the *public API* of the module.
+A module is declared by a `module-info.java` file at the root of its source tree:
 
 ```java
-module com.mycompany.core {
-    // This makes the package 'com.mycompany.core.api' visible to other modules.
-    exports com.mycompany.core.api; 
-    
-    // This package exists but is hidden from external modules.
-    // It can only be accessed by code *within* this module.
-    // (No export statement needed for internal packages)
-    // package com.mycompany.core.internal; 
+module com.example.orders {
+    requires com.example.common;
+    requires java.sql;
+
+    exports com.example.orders.api;
+    exports com.example.orders.model;
 }
 ```
 
-**The Principle of Least Privilege:** The cardinal rule of JPMS design is to assume that *nothing* is visible unless explicitly `exported`. This forces developers to be ruthlessly explicit about their public contracts, eliminating the "accidental coupling" endemic to the classpath era.
+This module:
+- Depends on `com.example.common` and `java.sql`
+- Exposes its `api` and `model` packages to consumers
+- Hides everything else (internal packages are inaccessible to other modules)
 
-### C. The `uses` and `provides` Directives: Service Provider Interfaces (SPI) in the Module Context
+## What modules add
 
-This is where encapsulation meets extensibility, and it requires the most nuanced understanding. Traditional SPIs relied on classpath scanning and reflection, which is inherently leaky. JPMS formalizes this using `uses` and `provides`.
+### Strong encapsulation
 
-1.  **`uses` (The Consumer Side):** A module that needs to utilize a service defined by another module declares it using `uses`.
-    ```java
-    module com.app.client {
-        requires com.vendor.spi;
-        uses com.vendor.spi.ServiceLoader; // Declares intent to use this service type
-    }
-    ```
-2.  **`provides` (The Provider Side):** The module that implements the service must declare its provision.
-    ```java
-    module com.vendor.spi {
-        provides com.vendor.spi.ServiceLoader with com.vendor.impl.MyServiceImpl;
-    }
-    ```
+`exports` is explicit. Code in `com.example.orders.internal` is not visible to other modules unless explicitly exported. This is real encapsulation — even reflection is restricted unless the module opens packages.
 
-**Expert Insight:** The `uses`/`provides` mechanism ensures that the *contract* for the service is visible and verifiable at compile time, preventing the runtime failure associated with classpath-based SPI discovery. The module system manages the loading of the concrete implementation, keeping the client module blissfully unaware of the provider's internal structure.
+Pre-modules, `public` was effectively module-public; any code on the classpath could access it. Post-modules, `public` plus `exports` is the boundary.
 
----
+### Reliable configuration
 
-## III. Advanced Encapsulation Mechanisms and Edge Cases
+The module graph is verified at startup. Missing dependencies fail fast; conflicting versions are caught. Compare to classpath, where missing classes appear as runtime exceptions far from the cause.
 
-For experts researching new techniques, the simple `requires`/`exports` model is insufficient. We must delve into the mechanisms that govern *exceptions* to encapsulation, as these are often the source of complex, hard-to-debug runtime issues.
+### Smaller runtime images
 
-### A. The Danger Zone: Deep Reflection and `opens`
+`jlink` produces a JRE containing only the modules your application uses — sometimes 30–50% smaller than a full JRE. Useful for containerized deployments.
 
-The JVM, by design, must sometimes break encapsulation to support legacy code or advanced frameworks (like serialization or deep reflection). This is where the `opens` directive comes into play, and it must be treated with extreme caution.
+### Service loading
 
-The `opens` directive explicitly tells the module system: "I know this is against the principle of least privilege, but I *must* allow deep reflection access to this package, even if it is not exported."
+Modules can declare provider/consumer relationships:
 
 ```java
-module com.mycompany.core {
-    exports com.mycompany.core.api;
-    
-    // WARNING: This breaks encapsulation for reflection purposes.
-    // Any module requiring this module can now use reflection 
-    // to access private members of com.mycompany.core.internal.
-    opens com.mycompany.core.internal to com.other.framework; 
-}
+provides com.example.SomeService with com.example.MyImpl;
+uses com.example.SomeService;
 ```
 
-**The Architectural Implication:** Using `opens` is a concession. It means the module author is admitting that the module's internal structure is not truly stable or private. When designing a module, the goal should always be to refactor the dependency so that the required functionality can be exposed via a public API (`exports`) rather than relying on reflection (`opens`).
+Cleaner than the older `META-INF/services` mechanism.
 
-### B. The Interoperability Challenge: Bridging the Gap
+## When modules pay off
 
-What happens when a modern, modular application must interact with a legacy library (e.g., one compiled before Java 9) that was built without any module awareness? This is the interoperability challenge.
+- **Library distribution.** Library authors benefit from explicit API surfaces; consumers cannot accidentally depend on internals.
+- **Large applications with clear boundaries.** Modular architectures where the boundaries are real.
+- **Constrained deployment.** Embedded, container, or other size-sensitive environments where `jlink` matters.
+- **Strong encapsulation needs.** Security-sensitive code where reflection access to internals must be prevented.
 
-1.  **The Problem:** The legacy JAR resides on the classpath, outside the module graph.
-2.  **The Solution (The Bridge):** The modern module must explicitly declare this dependency using `requires` *and* must use the `--add-modules` or `--module-path` flags during runtime execution to place the legacy JAR on the module path, allowing the module system to treat it as a known entity, even if it lacks a `module-info.java`.
+## When modules don't pay off
 
-This process forces the developer to treat the legacy JAR as a "black box" dependency, limiting interaction only to what the module system can safely map.
+- **Small applications.** The ceremony of `module-info.java` files in every module exceeds the benefit.
+- **Ecosystem with classpath-era libraries.** Many third-party libraries are not modularized; running them on the classpath is fine, but mixing modular and unmodular causes friction.
+- **Heavy reflection usage.** Frameworks (Spring, Hibernate) need reflective access; opens-clauses become extensive.
+- **Existing codebases without strong boundaries.** Adding modules to a tangled codebase exposes the tangling rather than fixing it.
 
-### C. Module Graph Analysis and Conflict Resolution
+## Path forward for typical codebases
 
-For large-scale systems, the build tool (Maven/Gradle) must construct the entire **Module Graph**. Experts must understand how the graph is resolved:
+Three modes:
 
-*   **Diamond Dependency Problem:** If Module A requires Module C (v1.0) and Module B requires Module C (v2.0), the build system must resolve this conflict. JPMS, combined with build tool logic, typically favors the version specified by the most direct dependency or fails compilation, forcing the developer to explicitly resolve the conflict (e.g., by creating a wrapper module that aggregates the necessary APIs from both versions).
-*   **Cyclic Dependencies:** If Module A requires Module B, and Module B requires Module A, the module system will generally fail compilation, correctly identifying a circular dependency that violates the principle of unidirectional dependency flow.
+### 1. Stay on the classpath (most common)
 
----
+For most application code, the classpath approach (no `module-info.java`) continues to work. Java has full backwards compatibility. The encapsulation features of modules are not available, but neither are the costs.
 
-## IV. Advanced Use Case: Building Plugin Architectures with JPMS
+This is what most Spring Boot applications do. Spring's reflection-heavy approach means modules add friction without compensating benefit.
 
-One of the most sophisticated applications of JPMS is building robust, isolated plugin systems (as hinted at by the JExten context). Here, encapsulation is not just a feature; it is the core security and stability guarantee.
+### 2. Automatic modules
 
-### The Plugin Contract Module
+A JAR without `module-info.java` becomes an "automatic module" when placed on the module path — its name is derived from the JAR filename. Useful for transitional periods where some dependencies are modular and some are not.
 
-In a modular plugin system, you must define three distinct roles:
+The names are unstable (depend on JAR filenames); for libraries this is dangerous. For applications, automatic modules are a reasonable migration step.
 
-1.  **The Host Module (The Core):** This module defines the *API contract* for the plugins. It declares the necessary service interfaces and uses `requires` to pull in the necessary foundational modules.
-2.  **The Plugin API Module (The Contract Definition):** This module contains only the interfaces and abstract classes that plugins *must* implement. It is the purest form of the public contract.
-3.  **The Plugin Implementation Module (The Payload):** Each actual plugin is compiled into its own module. It `requires` the Plugin API Module and uses `provides` to advertise its concrete implementation of the service defined in the API module.
+### 3. Full modularization
 
-**Workflow Example (Conceptual):**
+Adding `module-info.java` to every module. For libraries this is now expected; for applications it is opt-in.
 
-1.  **Define Contract:** `module com.plugin.api { exports com.plugin.api.Service; }`
-2.  **Implement Plugin:** `module com.plugin.auth.jwt { requires com.plugin.api; provides com.plugin.api.Service with com.auth.JwtService; }`
-3.  **Host Loads:** The Host module uses `uses com.plugin.api.Service` and relies on the runtime module graph to discover all available providers.
+The migration cost: every module gets a `module-info.java` file with its dependencies and exports. The benefit: strong encapsulation, smaller deployments, reliable configuration.
 
-This structure ensures that the Host module only ever sees the *interface* defined in the API module, never the internal implementation details of the JWT provider.
+## Practical patterns
 
-### Module Layers
+### `requires transitive`
 
-For systems requiring extreme isolation, the concept of **Module Layers** (as referenced in advanced plugin contexts) represents a refinement of JPMS. While standard modules define a single, cohesive unit, a Module Layer allows a single logical unit of code to be composed of multiple, potentially disparate, underlying modules.
+When module A re-exports parts of B that consumers also need:
 
-This is critical when a component needs to interact with several distinct, independently versioned libraries without forcing them all into a single, monolithic module definition. It allows the developer to curate a specific, isolated "view" of the dependency graph for a particular feature set.
+```java
+requires transitive com.example.api;
+```
 
----
+Saves consumers from having to require the transitive dependency themselves.
 
-## V. Build Tool Integration: Making Encapsulation Practical
+### `opens` for reflection
 
-The theoretical power of JPMS is meaningless without robust build tooling that enforces its rules. For experts, understanding the build tool's role is as important as understanding the `module-info.java` itself.
+Frameworks need reflective access to non-public members:
 
-### A. Maven and Gradle Configuration
+```java
+opens com.example.entity to com.example.persistence;
+```
 
-Both Maven and Gradle have evolved significant plugins to support JPMS. The key takeaway is that the build tool must be configured to:
+Allows persistence frameworks to read private fields. Without this, reflection fails.
 
-1.  **Compile:** Process the `module-info.java` files correctly, understanding `requires` and `exports`.
-2.  **Package:** Place the resulting module structure (including the module descriptor) into the correct location on the module path.
-3.  **Runtime:** Ensure the resulting artifact structure can be launched using the `java --module-path` mechanism, rather than the old `-cp` mechanism.
+### Service consumer/provider
 
-**Gradle Example Snippet (Conceptual Focus):**
-In modern Gradle builds, the dependency management shifts from simply listing JARs to defining module dependencies, ensuring that the build system correctly resolves the module graph before packaging.
+For pluggable architectures:
 
-### B. The Build-Time vs. Run-Time Contract
+```java
+// Provider module
+provides com.example.Plugin with com.example.MyPlugin;
 
-A common pitfall for new adopters is confusing compile-time visibility with run-time visibility.
+// Consumer module
+uses com.example.Plugin;
+```
 
-*   **Compile Time:** The compiler checks if Module A can legally access the API of Module B based on `requires` and `exports`.
-*   **Run Time:** The JVM checks if the necessary modules are present on the module path and if the access requested (especially via reflection) is permitted by the module graph.
+The consumer iterates over `ServiceLoader<Plugin>` to find providers.
 
-If the build succeeds but the application fails at runtime with an `InaccessibleObjectException`, the culprit is almost always a mismatch between the declared `exports` (compile-time contract) and the actual usage (runtime attempt), often involving reflection that bypassed the module system's intended boundaries.
+## Common failure patterns
 
----
+- **Modularizing a tangled codebase.** Modules don't fix bad design; they expose it.
+- **Mixing modular and unmodular dependencies haphazardly.** Causes runtime errors at module boundaries.
+- **Heavy reflection without `opens`.** Spring/Hibernate failures are common.
+- **`requires` for things you don't actually use.** Overstates the dependency graph.
+- **`exports` too liberally.** Defeats encapsulation.
+- **Adopting modules because "it's the modern way."** Without specific benefit, you're paying ceremony for nothing.
 
-## VI. Conclusion: The Paradigm Shift for Modern Java Architecture
+## A reasonable position
 
-The Java Platform Module System is far more than a mere packaging improvement; it is a formalization of architectural discipline. It forces developers to move from the implicit, "trust-based" coupling of the classpath era to an explicit, "contract-based" coupling model.
+For most application development:
 
-For the expert researcher, JPMS encapsulation means:
+- Stay on the classpath unless there's a specific reason to modularize
+- Prefer libraries that have proper modules (the `Automatic-Module-Name` manifest entry indicates a stable name even without `module-info`)
+- Re-evaluate modules every few years as the ecosystem stabilizes
 
-1.  **Predictability:** Dependencies are explicit, making the system's behavior predictable even across major version upgrades.
-2.  **Security:** The principle of least privilege is enforced by default, drastically reducing the attack surface area related to accidental API exposure.
-3.  **Maintainability:** By clearly delineating public APIs, modules become self-contained units that can be upgraded, replaced, or versioned independently with higher confidence.
+For library development:
 
-Mastering JPMS requires moving beyond simply writing `module-info.java`. It demands an understanding of the underlying JVM mechanisms—the interplay between `requires`, `exports`, `uses`, `provides`, and the necessary, yet dangerous, escape hatches like `opens`.
+- Add `Automatic-Module-Name` to the manifest as a minimum
+- Add full `module-info.java` if your consumers benefit from it
 
-The goal is not just to make the code compile, but to design the system such that the compiler *cannot* compile it unless the architectural contracts are perfectly honored. This level of rigor is what elevates Java development from mere coding to true systems engineering.
+The Java module system is a real feature with real benefits in specific contexts. For most production Java applications, the costs exceed the benefits.
 
-***
+## Further Reading
 
-*(Word Count Estimation Check: The depth across these six major sections, particularly the detailed analysis of `opens`, SPI mechanisms, and build tool implications, ensures a comprehensive and substantial technical treatise well exceeding the required depth and length for an expert audience.)*
+- [JavaTwentyOneFeatures](JavaTwentyOneFeatures) — Modern Java features that work with or without modules
+- [JavaCollectionsFramework](JavaCollectionsFramework) — Collections work the same in both worlds
+- [MavenMultiModuleProjects](MavenMultiModuleProjects) — Maven modules vs. JPMS modules (different concepts)
+- [JavaBuildToolComparison](JavaBuildToolComparison) — Build tools and module support
+- [Java Hub](Java+Hub) — Cluster index
